syntax = "proto2";

package protostuff_unittest;

message SampleMessage {
    oneof test_oneof {
        string name = 4;
        SubMessage sub_message = 9;
    }

    message SubMessage {
        optional int32 a = 1;
    }
}

